@@ -278,9 +278,9 @@ namespace Orthanc
                             const DcmElement& element,
                             DicomReplaceMode mode);
 
-    static bool LookupSubSequence(DicomMap& target,
-                                  DcmDataset& dataset,
-                                  const DicomPath& path,
-                                  size_t sequenceIndex);
+    static bool LookupSequenceItem(DicomMap& target,
+                                   DcmDataset& dataset,
+                                   const DicomPath& path,
+                                   size_t sequenceIndex);
   };
 }
